frontend/src/components/TicketCard/ticketCard.scss
@use '../../scss/abstracts' as *;
@use '../../scss/layout' as *;

.ticket-card {
	width: 265px;
	box-shadow: $box-shadow;

	.details {
		.card-title {
			font-size: $body-2;
			margin-bottom: 3px;
			@extend %text-truncate;
		}

		.event-details {
			font-size: $caption;
			@extend %text-truncate;
			margin-bottom: rem(5);
		}
	}

	#apple-wallet-btn {
		border-radius: 6px;
		@extend %btn-background;
		background-image: url('../../assets/icons/add-to-apple-wallet-logo.svg');
	}
}

